kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infrarevive
  labels:
    project: infrarevive
